# duckthink

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  description.yml  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
examples/: ask_demo.sql
scripts/: openai_proxy.py
src/: ai_functions.cpp  duckthink_extension.cpp  provider.cpp
src/include/: duckthink_extension.hpp  duckthink_internal.hpp  provider.hpp
test/sql/: duckthink.test
